gccida/g3/canonicalize_condition
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9533:4: error: expected ';' after expression
rtx v9; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9533:5: error: use of undeclared identifier 'v9'
rtx v9; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9534:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v10; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9539:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v15; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9541:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9541:5: error: use of undeclared identifier 'nonnote_insn'; did you mean 'note_insn'?
rtx nonnote_insn; // rax 
    ^~~~~~~~~~~~
    note_insn
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:4120:12: note: 'note_insn' declared here
static rtx note_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9542:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9542:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9550:4: error: expected ';' after expression
rtx x; // [rsp+8h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9550:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+8h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9551:4: error: expected ';' after expression
rtx xa; // [rsp+8h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9551:5: error: use of undeclared identifier 'xa'
rtx xa; // [rsp+8h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9552:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+1Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9556:1: error: use of undeclared identifier 'v9'
v9 = ( rtx)cond[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9572:84: error: use of undeclared identifier 'v9'
if ( rtx_class[v10] == 60 && const_tiny_rtx[0][*( ( unsigned __int8 *)rtx + 2)] == v9 && rtx != want_reg ) 
                                                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9579:1: error: use of undeclared identifier 'v9'
v9 = ( rtx)rtx[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9586:1: error: use of undeclared identifier 'nonnote_insn'; did you mean 'note_insn'?
nonnote_insn = prev_nonnote_insn( v5); 
^~~~~~~~~~~~
note_insn
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:4120:12: note: 'note_insn' declared here
static rtx note_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9587:6: error: use of undeclared identifier 'nonnote_insn'; did you mean 'note_insn'?
v5 = nonnote_insn; 
     ^~~~~~~~~~~~
     note_insn
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:4120:12: note: 'note_insn' declared here
static rtx note_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/loop.c:9588:34: error: use of undeclared identifier 'nonnote_insn'
if ( !nonnote_insn || *( _WORD *)nonnote_insn != 32 ) 
                                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canonicalize_condition/src/obj/loop.o] Error 1
